--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
   <body>
     <noscript>Вы должны включить JavaScript в настройках браузера</noscript>
     <div id="root"></div>
+    <div id="modal"></div>
   </body>
 </html>
